--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -40,7 +40,7 @@ body {
   font-family: dreamAvenue, sans-serif;
   min-height: 100vh;
   color: var(--color-black);
-  background: var(--color-neutral) !important;
+  background: var(--color-black) !important;
   transition:
     color 0.5s,
     background-color 0.5s;
