--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -2,9 +2,7 @@
 
 :root {
   --color-neutral: #fffcf5;
-  --color-orange: #ff9686;
-  --color-yellow: #ffee88;
-  --color-blue: #d6e8f7;
+  --color-pink: #BF40BF;
   --color-black: #333333;
   --color-white: #ffffff;
   
